Revision history for Class::Usul::Cmd

          - Added more tests
          - Passes Class::Usul tests
          - Creates L10N trait
          - Fixes missing predicate coverage
          - Completed util test script
          - Flipped default on debug prompt. Removed noask/nodebug
          - Removed process table methods
          - Added POD. Started adding tests

0.1.1     2023-03-13 04:04:33
          - Added project files to master branch
