@@ -20,7 +20,7 @@ my $prereqs  = {
     'Data::Printer' => '1.001000',
     'Data::Record' => '0.02',
     'Exporter::Tiny' => '1.006000',
-    'File::DataClass' => 'v0.73.5',
+    'File::DataClass' => 'v0.73.1',
     'Getopt::Long::Descriptive' => '0.111',
     'IO::Interactive' => '1.023',
     'JSON::MaybeXS' => '1.004004',
@@ -35,7 +35,7 @@ my $prereqs  = {
     'TimeDate' => '1.21',
     'Try::Tiny' => '0.31',
     'Type::Tiny' => '2.002001',
-    'Unexpected' => 'v1.0.6',
+    'Unexpected' => 'v1.0.1',
     'namespace::autoclean' => '0.29',
     'namespace::clean' => '0.27',
     'perl' => '5.010001',
