@@ -6,7 +6,7 @@ requires "Class::Null" => "2.110730";
 requires "Data::Printer" => "1.001000";
 requires "Data::Record" => "0.02";
 requires "Exporter::Tiny" => "1.006000";
-requires "File::DataClass" => "v0.73.5";
+requires "File::DataClass" => "v0.73.1";
 requires "Getopt::Long::Descriptive" => "0.111";
 requires "IO::Interactive" => "1.023";
 requires "JSON::MaybeXS" => "1.004004";
@@ -21,7 +21,7 @@ requires "Text::Autoformat" => "1.75";
 requires "TimeDate" => "1.21";
 requires "Try::Tiny" => "0.31";
 requires "Type::Tiny" => "2.002001";
-requires "Unexpected" => "v1.0.6";
+requires "Unexpected" => "v1.0.1";
 requires "namespace::autoclean" => "0.29";
 requires "namespace::clean" => "0.27";
 requires "perl" => "5.010001";
