@@ -10,7 +10,7 @@ Class::Null       = 2.110730
 Data::Printer     = 1.001000
 Data::Record      = 0.02
 Exporter::Tiny    = 1.006000
-File::DataClass   = v0.73.5
+File::DataClass   = v0.73.1
 Getopt::Long::Descriptive = 0.111
 IO::Interactive   = 1.023
 JSON::MaybeXS     = 1.004004
@@ -25,7 +25,7 @@ Text::Autoformat  = 1.75
 TimeDate          = 1.21
 Try::Tiny         = 0.31
 Type::Tiny        = 2.002001
-Unexpected        = v1.0.6
+Unexpected        = v1.0.1
 
 [Prereqs / ConfigureRequires]
 version           = 0.88
