@@ -1,5 +1,6 @@
 Revision history for Class::Usul::Cmd
 
+          - Added some more constants and functions
           - Added more tests
           - Passes Class::Usul tests
           - Creates L10N trait
